--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -13,12 +13,14 @@
   border: 0;
 }
 
-.side-bar {
-  margin: 0;
-  padding: 0;
-  width: 250px;
+.side-bar-wrapper {
+  width: 27%;
   height: 100%;
   background-color: #FFF;
+}
+
+.side-bar-hidden {
+  display: none;
 }
 
 .main-section {
@@ -199,31 +201,6 @@
 .control-btn span {
   margin-right: 5px;
 }
-
-/*.accounts-days {
-  width: 142px;
-  height: 48px;
-  margin: 0 15px;
-  padding: 0 15px;
-  background-color: #F1F1F1;
-  border: 0px;
-  border-radius: 10px 10px 0 0;
-  display: flex;
-  align-items: center;
-}
-
-.accounts-day-selector {
-  appearance: none;
-  outline: none;
-  font-size: 15px;
-  font-weight: 600;
-  color: #4A4A4A;
-  letter-spacing: 3px;
-  background: transparent; 
-  border: none;
-  cursor: pointer;
-  width: 100%;
-}*/
 
 .web-info {
   font-weight: 500;
