--- a/src/components/Home/SideBar/Journey/Journey.css
+++ b/src/components/Home/SideBar/Journey/Journey.css
@@ -1,59 +1,54 @@
 .journey {
+	width: 98%;
 	display: flex;
-	align-items: flex-start;
-	width: 100%;
-	margin: 10px 10px;
-	padding: 10px 0 10px 5px;
-	border-radius: 10px; 
-	box-shadow: 0px 5px 10px 0px rgba(0,0,0, 0.05);
-	cursor: pointer;
-}
-
-.journey-delete-btn, .journey-update-btn {
-	background: none;
-	outline: none;
-}
-
-.journey-delete-btn img {
-	padding: 0;
-	margin: 4px 0 0 10px;
-	width: 9px;
-}
-
-.journey-update-btn img {
-	padding: 0;
-	margin: 3px 0 0 10px;
-	width: 12px;
-}
-
-.journey-content {
-	font-size: 16px;
-	color: rgba(70, 70, 70, 1);
-	margin: 0px 15px;
-	letter-spacing: 0.6px;
-}
-
-.input-update-journey {
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 20px;
-	letter-spacing: 0.2px;
-	color: rgba(62,62,62, 0.8);
+	align-items: center;
+	justify-content: space-between;
+	padding: 11px 0;
+	margin: 8px 0;
 	border-radius: 6px;
-	border: 2px solid rgba(70, 210, 235, 0);
-	padding: 3%;
-	margin-right: 5px;
-	background-color: rgba(0, 0, 0,0.1);
-	outline: none;
+	background-color: #fff;
+	box-shadow: 3px 3px 7px 0px rgba(0,0,0, 0.1);
 }
 
-.input-update-journey::placeholder {
-	color: rgba(62,62,62, 0.5);
+.change-display-journey-btn {
+	margin: 0 15px;
+	cursor: pointer;
+	padding: 2px 0 2px 10px;
+}
+
+.journey-name {
+	font-weight: 400;
+	font-size: 15px;
+	font-family: "Ubuntu";
+	color: #3e3e3e;
+	letter-spacing: 1px;
+}
+
+.journey-btn-group {
+	margin-right: 10px;
+	padding: 2px;
+	display: flex;
+	align-items: center;
+}
+
+.update-journey-input {
 	font-weight: 500;
-	letter-spacing: 0.5px;
+	font-size: 15px;
+	color: #3E3E3E;
+	border-radius: 6px;
+	border: 0px;
+	background-color: #f0f0f0;
+	padding: 8px 0 8px 10px;
+	margin-left: 12px;
+	width: 63%;
 }
 
-.input-update-journey:focus {
-	background-color: rgba(0, 0, 0,0.1);
-	background-color: rgba(231, 231, 240, 100);
+.update-journey-input::placeholder {
+	color: rgba(62,62,62, 0.6);
+	letter-spacing: 1px;
+}
+
+.update-journey-input:focus {
+	 background-color: rgba(0, 0, 0,0.02);
+	 border: 1px solid #177EF5;
 }
