--- a/src/components/Home/SideBar/SideBar.css
+++ b/src/components/Home/SideBar/SideBar.css
@@ -1,124 +1,83 @@
-.side-bar-container {
-	margin: 0;
-	padding: 0;
+.side-bar {
+	width: 100%;
 }
 
-.journeys-list-container {
-	margin: 0;
+.journeys-list-wrapper {
 	padding-top: 60px;
 	width: 100%;
-	height: 100%;
 }
 
 .journeys-list {
-	width: 90%;
-	height: auto;
-	margin: 0 10px;
-	padding: 0; 
+	padding: 0;
+	margin: 0 5px;
 }
 
 .add-journey-wrapper {
 	display: flex;
-	align-items: center;
-	margin: 10px 15px;
-	width: 90%;
-	padding: 2%;
+	margin: 10px 0;
+	padding: 5%;
 }
 
 .show-add-journey-btn {
 	display: flex;
 	align-items: center;
-	padding: 0;
-	background-color: rgba(255, 255, 255,0);
-	outline: none;
-}
-
-.show-add-journey-img {
-	width: auto;
-	height: auto;
-	margin: 0;
-	padding: 0;
-}
-
-.show-add-journey-text {
+	color: #9B9B9B;
 	font-weight: 500;
-	font-size: 16px;
-	line-height: 20px;
+	font-size: 15px;
 	letter-spacing: 0.2px;
-	color: rgba(62,62,62, 0.8);
+	border-radius: 8px;
+	transition: 0s;
+	outline: none;
+	cursor: pointer;
 }
 
-.add-new-journey {
+.show-add-journey-btn:hover {
+  color: #177EF5;
+}
+
+.add-journey {
 	display: flex;
 	flex-direction: column;
 	align-items: left;
-	padding: 0;
-	width: 95%;
-	margin: 0;
+	width: 100%;
 }
 
-.input-new-journey {
+.add-journey-input {
 	font-weight: 500;
-	font-size: 16px;
-	line-height: 20px;
-	letter-spacing: 0.2px;
-	color: rgba(62,62,62, 0.8);
+	font-size: 15px;
+	color: #3E3E3E;
 	border-radius: 6px;
-	border: 2px solid rgba(70, 210, 235, 0);
-	padding: 3%;
-	margin-right: 5px;
-	background-color: rgba(0, 0, 0,0.1);
-	outline: none;
+	border: 1px solid #f0f0f0;
+	background-color: #f0f0f0;
+	padding: 8px;
 }
 
-.input-new-journey::placeholder {
-	color: rgba(62,62,62, 0.5);
-	font-weight: 500;
-	letter-spacing: 0.5px;
+.add-journey-input::placeholder {
+	color: rgba(62,62,62, 0.6);
+	letter-spacing: 1px;
 }
 
-.input-new-journey:focus {
-	background-color: rgba(0, 0, 0,0.1);
-	background-color: rgba(231, 231, 240, 100);
+.add-journey-input:focus {
+	background-color: rgba(0, 0, 0,0.02);
+	border: 1px solid #177EF5;
 }
 
-.submit-new-journey-group {
+.add-journey-btn-group {
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-	padding: 0;
-	margin-top: 10px;
+	margin-top: 7px;
 }
 
-.submit-new-journey {
+.add-journey-submit {
 	font-weight: 500;
 	font-size: 15px;
 	letter-spacing: 1px;
 	margin-right: 10px;
 	padding: 3px 6px;
 	width: 40%;
-	color: rgba(249,249,253,1);
-	background-color: rgba(40, 215, 194, 1);
-	/*background-color: rgba( 0, 172, 238, 1);*/
-	border: 0px;
+	color: #FFF;
+	background-color: #2D8AF5;
 	border-radius: 6px;
-	box-shadow: 3px 5px 10px 0px rgba(0,0,0, 0.05);
 	cursor: pointer;
-}
-
-.submit-new-journey:hover {
-	/*background-color: rgba( 0, 160, 220, 1);*/
-	background-color: rgba(40, 200, 190, 1);
-}
-
-.cancel-new-submit-btn {
-	margin: 4px 10px 0 2px;
-	width: auto;
-	cursor: pointer;
-	outline: none;
-	background-color: rgba( 197, 199, 212, 0);
-}
-
-.cancel-dark-btn-img {
-	width: 16px;
 }
