--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,28 +1,47 @@
-.navigation-nav {
-	padding: 10px 0;
-	margin: 0;
-	width: 100%;
+.navigation {
+  padding: 10px 18px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
   font-family: 'Roboto';
   font-weight: 600;
-  letter-spacing: 0.1px;
+  letter-spacing: 0.5px;
 }
 
-.slogan {
+.navigation button {
+  font-size: 15px;
+  color: #177ef5;
+  font-family: 'Roboto';
+  font-weight: 600;
+  background-color: #FFF;
+  margin: 0 10px;
+  padding: 6px 8px;
+  border-radius: 7px;
+  transition: 0s;
+  outline: none;
+}
+
+.navigation button:hover {
+  color: #BEC3CA;
+}
+
+.nav-text-wrapper {
+  padding: 0 10px;
+}
+
+.nav-text-slogan {
 	font-size: 15px;
 	color: rgba(62, 62, 62, 1);
 	margin-left: 18px;
 }
 
-.logo {
+.nav-text-logo {
 	font-size: 22px;
 	color: #4a4a4a;
-  margin-right: 15px;
+  margin-left: 18px;
 }
 
-.user-display {
+.nav-user {
 	padding: 0;
 	margin: 0;
 	display: flex;
@@ -30,35 +49,15 @@
 	justify-content: flex-end;
 }
 
-.user-signout {
-  font-size: 15px;
+.nav-user-name {
+  font-size: 16px;
   color: rgba(62, 62, 62, 1);
-  margin: 2px 15px 0 0;
-  padding: 0;
-  cursor: pointer;
+  margin-left: 2px;
 }
 
-.user-signout:hover {
-	color: rgba(62, 62, 62, 0.7);;
-}
-
-.user-name-words {
-	font-size: 16px;
-	color: rgba(62, 62, 62, 1);
-	margin-left: 2px;
-}
-
-.seperate-line {
+.seperate-line-img {
   width: auto;
   height: 15px;
-  margin: 2px 10px 0 10px;
+  margin: 0 10px;
   padding: 0;
-}
-
-.user-profile-picture {
-	background-color: rgba(232, 232, 232, 1);
-	width: 38px;
-	height: 38px;
-	border-radius: 20px;
-	margin-right: 5px;
 }
