--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -10,19 +10,21 @@
 
 .navigation button {
   font-size: 15px;
-  color: #177ef5;
+  color: rgba(62, 62, 62, 1);
   font-family: 'Roboto';
   font-weight: 600;
   background-color: #FFF;
   margin: 0 10px;
-  padding: 6px 8px;
+  padding: 6px 10px;
+  border: 1px solid #3E3E3E;
   border-radius: 7px;
   transition: 0s;
   outline: none;
 }
 
 .navigation button:hover {
-  color: #BEC3CA;
+  color: #177EF5;
+  border: 1px solid #177EF5;
 }
 
 .nav-text-wrapper {
