--- a/src/components/Home/Accounts/Accounts.css
+++ b/src/components/Home/Accounts/Accounts.css
@@ -53,7 +53,7 @@
 	flex-direction: column;
 	align-items: center;
 	width: 14%;
-	margin: 0 6px;
+	margin-left: 5px;
 	padding: 0 4px;
 }
 
@@ -63,12 +63,12 @@
 }
 
 .item-category-text {
-	font-size: 16px;
+	font-size: 15px;
 	color: #3E3E3E;
 }
 
 .item-category-btn-icon {
-	margin-left: 8px;
+	margin-left: 12px;
 	padding-bottom: 2px;
 }
 
@@ -102,7 +102,7 @@
 
 .category-selector button {
 	color: #3E3E3E;
-	font-size: 16px;
+	font-size: 15px;
 	font-weight: 400;
 	text-align: center;
 	letter-spacing: 1px;
@@ -124,6 +124,10 @@
 	width: 20%;
 }
 
+.add-item-content {
+	width: 97%;
+}
+
 .add-item-content input {
 	font-weight: 500;
 	font-size: 15px;
@@ -131,7 +135,6 @@
 	margin: 0 4px;
 	padding: 6px;
 	background-color: rgba(0, 0, 0,0.1);
-	outline: none;
 	border: 2px solid rgba(70, 210, 235, 0);
 	border-radius: 6px;
 }
@@ -157,6 +160,7 @@
 	font-weight: 500;
 	font-size: 13px;
 	letter-spacing: 0.8px;
+	height: 36px;
 	color: #FFF;
 	background-color: #2D8AF5;
 	margin: 6px 0;
