--- a/src/components/Home/Charts/Charts.css
+++ b/src/components/Home/Charts/Charts.css
@@ -46,6 +46,10 @@
 }
 
 .chart-legend {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
   padding: 4% 1.2%;
   width: 50%;
 }
