--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -32,9 +32,10 @@
 }
 
 .nav-text-slogan {
-	font-size: 15px;
+	font-size: 13px;
+  font-weight: 400;
 	color: rgba(62, 62, 62, 1);
-	margin-left: 18px;
+	margin: 2px 0 2px 10px;
 }
 
 .nav-text-logo {
