--- a/src/components/Home/StaticPannel/StaticPannel.css
+++ b/src/components/Home/StaticPannel/StaticPannel.css
@@ -31,6 +31,8 @@
   margin-right: 15px;
   font-family: "Ubuntu";
   padding: 3px;
+  display: flex;
+  flex-direction: column;
 }
 
 .static-pannel-title {
