--- a/src/components/Home/StaticPannel/StaticPannel.css
+++ b/src/components/Home/StaticPannel/StaticPannel.css
@@ -57,6 +57,7 @@
 .static-pannel-update {
   display: flex;
   flex-direction: flex-end;
+  height: 36px;
 }
 
 .total-budget-update {
@@ -70,7 +71,8 @@
   font-weight: 400;
   color: #3e3e3e;
   padding-left: 6px;
-  width: 90px;
+  width: 96px;
+  height: 32px;
   background-color: #f0f0f0;
   border: 0;
   border-radius: 6px;
@@ -86,11 +88,18 @@
 }
 
 .static-pannel-text {
+  margin-top: 12px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+}
+
+.static-pannel-text span {
+  font-size: 24px;
+  font-weight: 400;
+  color: #177EF5;
 }
 
 .static-pannel-text button {
-   margin-top: 20px;
+  margin-top: 3px;
 }
 
