--- a/src/components/Home/SideBar/SideBar.css
+++ b/src/components/Home/SideBar/SideBar.css
@@ -71,13 +71,14 @@
 
 .add-journey-submit {
 	font-weight: 500;
-	font-size: 15px;
-	letter-spacing: 1px;
-	margin-right: 10px;
-	padding: 3px 6px;
-	width: 40%;
+  font-size: 15px;
+  letter-spacing: 1px;
 	color: #FFF;
 	background-color: #2D8AF5;
-	border-radius: 6px;
+	height: 36px;
+	width: 86px;
+	margin-right: 5px;
+	padding: 0 6px;
+	border-radius: 8px;
 	cursor: pointer;
 }
